--- a/Task2/.settings/org.eclipse.wst.common.component
+++ b/Task2/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="Task2">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="Task2"/>
         <property name="java-output-path" value="/Task2/build/classes"/>
     </wb-module>
